==> davewhiiite/uvc/firmware/uvc_controller/mbed-os/targets/TARGET_ARM_SSG/TARGET_CM3DS_MPS2/serial_api.c <==
#include <math.h>
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include "serial_api.h"
#include "pinmap.h"
#include "mbed_error.h"
#include "gpio_api.h"
#include "platform_devices.h"
#define STDIO_UART_NOT_INITED 0
#define STDIO_UART_INITED     1
#define UART_NUMBER           5

void serial_init(serial_t *obj, PinName tx, PinName rx)
{
    if (fill_serial_object(obj, tx, rx) != 0) {
        return;
    }

    (void)arm_uart_init(obj->uart, SystemCoreClock);

    /*
     * If tx and rx pins are not linked to a GPIO (like for UART0),
     * pin_function will have no effect.
     */
    pin_function(tx, pinmap_function(tx, PinMap_UART_TX));
    pin_function(rx, pinmap_function(rx, PinMap_UART_RX));
}

void serial_baud(serial_t *obj, int baudrate)
{
    if (arm_uart_set_baudrate(obj->uart, (uint32_t)baudrate) !=
        ARM_UART_ERR_NONE) {
        error("Invalid baudrate value or uart not initialized");
    }
}

void serial_irq_set(serial_t *obj, SerialIrq irq, uint32_t enable)
{
    switch (irq) {
    case RxIrq:
        if (enable) {
            NVIC_EnableIRQ(obj->irq_number);
            (void)arm_uart_irq_rx_enable(obj->uart);
        } else {
            arm_uart_irq_rx_disable(obj->uart);
            NVIC_DisableIRQ(obj->irq_number);
        }
        break;
    case TxIrq:
        if (enable) {
            NVIC_EnableIRQ(obj->irq_number);
            (void)arm_uart_irq_tx_enable(obj->uart);
        } else {
            arm_uart_irq_tx_disable(obj->uart);
            NVIC_DisableIRQ(obj->irq_number);
        }
        break;
    }
    /* default: not added to force to cover all enumeration cases */
}

void serial_pinout_tx(PinName tx)
{
    pinmap_pinout(tx, PinMap_UART_TX);
}
